# automatic_curtains

./: CMakeLists.txt  README.md  README.rst  prj.conf
include/: HalGpio.h
schematics/: Double BTS7960 43A H-bridge High-power Motor Driver module_smart car_ - AliExpress 502.html  easyEdaProject.eprj
schematics/Double BTS7960 43A H-bridge High-power Motor Driver module_smart car_ - AliExpress 502_files/: 0.js.download  1.js.download  H6d0cbd9a5d6248dbb4fa58f1ac0cb257G.jpg_480x480q75.jpg_.avif  S46d0beba81b2449885322965b24baeafJ.png_480x480.png_.avif  S835f79c4a5c648369687bc740f7c45a0u.jpg_480x480q75.jpg_.avif  Sa948716dd8ab4c518cff64524a346652R.jpg_220x220q75.jpg_.avif  Sacf258d676764f549e289c0bb3d23f02L.jpg_480x480q75.jpg_.avif  Sb303cfb53509411d8c9ba4a318b64b21k.png_480x480.png_.avif  Se7177c8bc3fc4895a4118886bf00c814U.jpg_220x220q75.jpg_.avif  Se7177c8bc3fc4895a4118886bf00c814U.jpg_960x960q75.jpg_.avif  Sfb6355b5167046d08242f7f052711ef9c.jpg_220x220q75.jpg_.avif  Sfc592599456d4a258d9a5f34434178a4q.jpg_220x220q75.jpg_.avif  affiliate-tracker.js.download  batman.css  batman.js.download  comet-pro-shipto-bLCM2~login~ship-to-setting.js.download  comet-pro-shipto-bLCM2~maddress~ship-to-setting.js.download  comet-pro-shipto-bLCM2~ship-to-setting.js.download  gep-sdk.js.download  gtm.js.download  index(3).js.download  js  (+22 more)
src/: App.c  App.h  AppEncoder.c  AppEncoder.h  AppMotor.c  AppMotor.h  HalGpio.c  HalGpio.h  HalPwm.c  HalPwm.h  HalTim.c  HalTim.h  HalUart.c  HalUart.h  SrvMenu.c  SrvMenu.h  SrvScheduler.c  SrvScheduler.h  UtilGen.c  UtilGen.h  main.c  scsVersion.h
